# sentinel

./: .gitmodules  README.md  build.sh  config.ini  git.pri  iscc.cmd  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sentinel-admin.pro  sentinel-admin.pro.user.6f51a09  sentinel-admin.qrc  sentinel-admin.sh  sentinel-admin_de.qm  sentinel-admin_de.ts  sentinel-admin_en.qm  sentinel-admin_en.ts  sentinel-admin_fr.qm  sentinel-admin_fr.ts  setup.iss
data_samples/: sensors
evigilante_configuration/: .gitignore  CMakeLists.txt  README.md  package.xml
evigilante_configuration/ext/libzip/lib/: libzip.so.4.0.0
evigilante_configuration/include/eos/configuration/: configuration.hpp  models.pb.h
evigilante_configuration/msgs/: models.proto  protoc.sh
evigilante_configuration/msgs/robot_sentinel/: mainwindow.ui  robot_sentinel.pro
evigilante_configuration/source/: configuration.cpp  pimpl_configuration.cpp  pimpl_configuration.hpp
evigilante_configuration/source/models/: models.pb.cc
evigilante_configuration/source/resource_manager/: file.hpp  loader.cpp  loader.hpp  resource.hpp  resource_manager.cpp  resource_manager.hpp  ziparchive.cpp  ziparchive.hpp
evigilante_configuration/source/resource_manager/loaders/: map_loader.cpp  map_loader.hpp  patrols_loader.cpp  patrols_loader.hpp  sensors_loader.cpp  sensors_loader.hpp  settings_loader.cpp  settings_loader.hpp  tasksscheduled_loader.cpp  tasksscheduled_loader.hpp  zones_loader.cpp  zones_loader.hpp
evigilante_configuration/tests/: test_configuration.cpp  test_map.cpp  test_patrols.cpp  test_sensors.cpp  test_settings.cpp  test_tasksscheduled.cpp  test_zip.cpp  test_zones.cpp
evigilante_sdk/: CMakeLists.txt  README.md  package.xml
evigilante_sdk/include/eos/sdk/: channel.hpp  client.hpp  log_interface.hpp  msgs.pb.h  server.hpp
evigilante_sdk/msgs/: msgs.pb.cc  msgs.proto  protoc.sh
evigilante_sdk/python_client/: embisphere.proto  embisphere_pb2.py  test.py
evigilante_sdk/src/engine/: backend_treatment.cpp  client.cpp  client_impl.cpp  client_impl.hpp  log_interface.cpp  message_handler.hpp  server.cpp  server_callsystem.cpp  server_callsystem.hpp  server_impl.cpp  server_impl.hpp
evigilante_sdk/src/http/: network.cpp  network.h
evigilante_sdk/src/tcp/: ipaddress.cpp  ipaddress.hpp  listener.cpp  listener.hpp  logger.cpp  logger.hpp  packet.cpp  packet.hpp  singleton.hpp  socket.cpp  socket.hpp
evigilante_sdk/tests/: catch.hpp  test.cpp  test_client.cpp  test_server.cpp
remote/: robot.cpp  robot.h
sentinel-admin_core/: constants.h  events.h  qt_utils.cpp  qt_utils.h
sentinel-common/core/: appinstance.cpp  appinstance.h  constants.h  eventmanager.cpp  eventmanager.h  helper.cpp  helper.h  iservices.h  simplesignal.h  workspace.cpp  workspace.h
sentinel-common/helper/: map.cpp  map.h
sentinel-common/sentinel-common-master/core/: appinstance.cpp  appinstance.h  sentinel_logger.cpp  sentinel_logger.h  singleton.h
sentinel-common/sentinel-common-master/sftp/: sftp.cpp  sftp.h  transfer.cpp  transfer.h
sentinel-common/sentinel-common-master/users/: user.h  userloader.cpp  userloader.h
sentinel-common/sftp/: sftp.cpp  transfer.cpp  transfer.h
sentinel-common/users/: user.cpp
tests/automatic/: autorun.cpp  autorun.h  main.cpp  testpatrol.cpp  testpatrol.h  testplanification.cpp  testplanification.h  testresourcemanager.cpp  testresourcemanager.h  tests.pro  testworkspace.cpp  testworkspace.h  testzone.cpp  testzone.h
tests/manual/test-daemon/: mainwindow.cpp  mainwindow.h  mainwindow.ui  test-daemon.pro
tools/: patrolcolor.cpp  patrolcolor.h
ui/: dialogabout.cpp  dialogabout.h  dialogabout.ui  dialoglogin.cpp  dialoglogin.h  dialoglogin.ui  dialognewsensor.cpp  dialognewsensor.h  dialognewsensor.ui
ui/admin/: patroladminwidget.cpp  patroladminwidget.h  patroladminwidget.ui  patrollistviewdelegate.cpp  patrollistviewdelegate.h  patrolstab.cpp  patrolstab.h
ui/calendar/: calendarwidget.cpp  calendarwidget.h  calendarwidget.ui  contants_calendar.h  dialogcreateplannification.cpp  dialogcreateplannification.h  dialogcreateplannification.ui  minicalendarwidget.cpp  minicalendarwidget.h  taskscheduled.cpp  taskscheduled.h  tasksscheduled.cpp  tasksscheduled.h
ui/calendar/Graphics/: calendarbackgroundscene.cpp  calendarbackgroundscene.h  calendarpatrolscene.cpp  calendarpatrolscene.h
ui/calendar/Graphics/GraphicsItem/: backgrounditem.cpp  backgrounditem.h  daybackgrounditem.cpp  daybackgrounditem.h  graphicspatrolitem.cpp  graphicspatrolitem.h  linetimeitem.cpp  linetimeitem.h  listbackgrounditem.cpp  listbackgrounditem.h  monthbackgrounditem.cpp  monthbackgrounditem.h  weekbackgrounditem.cpp  weekbackgrounditem.h
ui/config/: dialogconfiguration.cpp  dialogconfiguration.h  networkconfiguration.cpp  networkconfiguration.h  networkconfiguration.ui  restapiconfiguration.cpp  restapiconfiguration.h  restapiconfiguration.ui  robotconfiguration.cpp  robotconfiguration.h  robotconfiguration.ui  siaconfiguration.cpp  siaconfiguration.h  siaconfiguration.ui  useraccountsconfiguration.cpp  useraccountsconfiguration.h  useraccountsconfiguration.ui
ui/map/: editablepixmapitem.cpp  editablepixmapitem.h  mapcreationwizard.cpp  mapcreationwizard.h  mapcreationwizard.ui  mapgraphicsview.cpp  mapgraphicsview.h  mapwidget.cpp  mapwidget.h  patrolgraphicsitem.cpp  patrolgraphicsitem.h  qgraphicssvgs.cpp  qgraphicssvgs.h  sensorpointgraphicsitem.cpp  sensorpointgraphicsitem.h  zonegraphicsitem.cpp  zonegraphicsitem.h
windows-3rdparts/: README.md
windows-3rdparts/include/google/gflags/: config.h  gflags.h
windows-3rdparts/include/google/glog/: log_severity.h  logging.h  raw_logging.h  stl_logging.h  vlog_is_on.h
